Добавлена проверка наличия email в бд при регистрации, добавлены стили для страницы регистрации, главной и списка статей

--- a/src/views/courses/index.pug
+++ b/src/views/courses/index.pug
@@ -1,16 +1,16 @@
 extends ../index.pug
 
 block content
-    if flash.success
-      each message in flash.success
-        .alert.alert-success
-          = message
-    
-    if articles.length === 0
-        p Пока курсов нет
-    else  
-        each article in articles
-            div  
-                h2
-                    a(href=route('thisArticle', {id:article.id})) #{article.articleName}
-                p #{article.description}
+        if flash && flash.success
+        each message in flash
+            .alert.alert-success
+                = message
+
+        if articles.length === 0
+            p Пока статей нет
+        else  
+            each article in articles
+                div  
+                    h2
+                        a(href=route('article', {id:article.id})) #{article.articleName}
+                    p #{article.description}
