исправил верстку списка статей, теперь не уезжают за футер

--- a/src/views/courses/index.pug
+++ b/src/views/courses/index.pug
@@ -7,7 +7,7 @@ block content
             .alert.alert-success
                 = message
         
-        main.container.d-flex.flex-column.mb-auto.align-items-center.border-start.border-end.border-dark.border-1.vh-100.p-0
+        main.container.d-flex.flex-column.mb-auto.align-items-center.border-start.border-end.border-dark.border-1.min-vh-100.h-100.p-0
             div.border-bottom.border-dark.border-1.w-100 
                 h1.mt-3.mb-3.text-center= 'Список статей'
 
